--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,33 @@
         </nav>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><a class="glyphicon glyphicon-home home" href="/"> Home</a></li>
-            <li><a class="glyphicon glyphicon-link about" href="/home/about"> About</a></li>
-            <li><a class="glyphicon glyphicon-edit sign_up" href="/users/sign_up"> sign up</a></li>
-            <li><a class="glyphicon glyphicon-log-in sign_in" href="/users/sign_in"> login</a></li>
+            <% if user_signed_in? %>
+              <li class="glyphicon glyphicon-home home">
+                <%= link_to " Home", "#" %>
+              </li>
+              <li class="glyphicon glyphicon-user users">
+                <%= link_to " Users", "#" %>
+              </li>
+              <li class="glyphicon glyphicon-book books">
+                <%= link_to " Books", "#" %>
+              </li>
+              <li class="glyphicon glyphicon-log-out logout">
+                <%= link_to " logout", destroy_user_session_path, method: :delete %>
+              </li>
+            <% else %>
+              <li class="glyphicon glyphicon-home home">
+                <%= link_to " Home", root_path %>
+              </li>
+              <li class="glyphicon glyphicon-link about">
+                <%= link_to " About", home_about_path %>
+              </li>
+              <li class="glyphicon glyphicon-edit sign_up">
+                <%= link_to " sign up", new_user_registration_path %>
+              </li>
+              <li class="glyphicon glyphicon-log-in sign_in">
+                <%= link_to " login", new_user_session_path %>
+              </li>
+            <% end %>
           </ul>
         </nav>
       </div>
