--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,13 @@
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
               <li class="glyphicon glyphicon-home home">
-                <%= link_to " Home", "#" %>
+                <%= link_to " Home", user_path(current_user) %>
               </li>
               <li class="glyphicon glyphicon-user users">
-                <%= link_to " Users", "#" %>
+                <%= link_to " Users", users_path %>
               </li>
               <li class="glyphicon glyphicon-book books">
-                <%= link_to " Books", "#" %>
+                <%= link_to " Books", books_path %>
               </li>
               <li class="glyphicon glyphicon-log-out logout">
                 <%= link_to " logout", destroy_user_session_path, method: :delete %>
