--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,32 @@
  @import "bootstrap-sprockets"; 
  @import "bootstrap";
 
+header {
+  color: white;
+  .navbar-left span {
+    font-size: 20px;
+    padding-top: 10px;
+  }
+}
+
 .body {
   margin-top: 51px;
+}
+
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+a:visited {
+  color: #666;
+}
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+#error_explanation {
+    color: red;
 }
