--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,18 @@
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+    <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="row">
   <div class="col-xs-3">
     <h2>User info</h2>
-    <img class="attachment user profile_image fallback" src="/assets/no_image-ede28af4bad96368ef41be1b4be1cffce0d9402540f75d17895e32cb0d2af5e6.jpg" alt="No image">
+    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
     <table class="table">
       <tbody>
         <tr></tr> 
@@ -17,21 +28,14 @@
     </table>
 
     <div class="row">
-      <a class="col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_21146" href="/users/21146/edit"></a>
+      <%= link_to edit_user_path(current_user) do %>
+        <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></span>
+      <% end %>
     </div>
 
     <h2>New book</h2>
     <%= form_for(@book, url: books_path) do |f| %>
-      <% if @book.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
-          <ul>
-          <% @book.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
+      
       <div class="field row">
         <%= f.label :title %><br />
         <%= f.text_field :title, class:"col-xs-12 book_title", id:"book_title" %>
@@ -61,9 +65,9 @@
         <% @books.each do |book| %>
         <tr>
           <td>
-            <a href="/users/21147">
-              <img class="attachment user profile_image" src="/attachments/c07f8b963ad12fe1b2da47152022cb924c67de30/store/fill/50/50/7221c28d18146b6a85f2c138f0849b821735abb489975d6070b857129410/profile_image" alt="Profile image">
-            </a>        
+            <%= link_to user_path(book.user) do %>
+              <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg", size:'40x40' %>
+            <% end %>        
           </td>
           <td><%= link_to book.title, book_path(book) %></td>
           <td><%= book.body %></td>
