--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,37 +1,40 @@
+<% if @book.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+    <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="row">
   <div class="col-xs-3">
     <h2>User info</h2>
-    <img class="attachment user profile_image fallback" src="/assets/no_image-ede28af4bad96368ef41be1b4be1cffce0d9402540f75d17895e32cb0d2af5e6.jpg" alt="No image">
+    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
     <table class="table">
       <tbody>
         <tr></tr> 
         <tr>
     	    <th>name</th>
-    	    <th><%= current_user.name %></th>
+    	    <th><%= @find_book.user.name %></th>
         </tr>
         <tr>
     	    <th>introduction</th>
-    	    <th><%= current_user.introduction %></th>
+    	    <th><%= @find_book.user.introduction %></th>
         </tr>
       </tbody>
     </table>
 
     <div class="row">
-      <a class="col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_21146" href="/users/21146/edit"></a>
+      <%= link_to edit_user_path(@find_book.user) do %>
+        <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></span>
+      <% end %>
     </div>
 
     <h2>New book</h2>
     <%= form_for(@book, url: books_path) do |f| %>
-      <% if @book.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
-          <ul>
-          <% @book.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-          </ul>
-        </div>
-      <% end %>
       <div class="field row">
         <%= f.label :title %><br />
         <%= f.text_field :title, class:"col-xs-12 book_title", id:"book_title" %>
@@ -52,15 +55,21 @@
 		  <tbody>
 		    <tr>
           <td>
-            <a href="/users/21146">
-              <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg" alt="No image icon"><br>
-            Hachi
-            </a>        
+            <%= link_to user_path(@find_book.user_id) do %>
+              <%= attachment_image_tag @find_book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
+              <br><%= @find_book.user.name %>
+            <% end %>       
           </td>
           <td><%= link_to @find_book.title, book_path(@find_book) %></td>
           <td><%= @find_book.body %></td>
-          <td><a class="btn-sm btn-success edit_book_33409" href="/books/33409/edit">Edit</a></td>
-          <td><%= link_to "Destroy", book_path(@find_book), method: :delete %></td>
+          <% if @find_book.user == current_user %>
+            <td>
+              <%= link_to edit_book_path(@find_book) do %>
+                <span class="btn-sm btn-success">Edit</span>
+              <% end %>
+            </td>
+            <td><%= link_to "Destroy", book_path(@find_book), method: :delete %></td>
+          <% end %>
         </tr>
       </tbody>
     </table>
