--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,9 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<h1>Editing Book</h1>
-		
 		<% if @book.errors.any? %>
       <div id="error_explanation">
-        <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
+        <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
         <ul>
         <% @book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -12,23 +11,19 @@
         </ul>
       </div>
     <% end %>
-  	
 		<%= form_for(@book) do |f| %>
       <div class="field row">
         <label for="book_title">Title</label>
         <%= f.text_field :title, class:"col-xs-12 book_title", id:"book_title" %>
       </div>
-
       <div class="field row">
         <label for="book_opinion">Opinion</label>
         <%= f.text_area :body, class:"col-xs-12 book_body", id:"book_body" %>
       </div>
-
       <div class="actions row">
         <%= f.submit "Update Book", class:"btn btn-primary col-xs-12" %>
       </div>
     <% end %>
-    
 		<%= link_to "Show", book_path(@book) %>
 		|
 		<%= link_to "Back", books_path %>
