--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,18 +1,17 @@
-<% if @book.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
-    <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
 <div class="row">
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="col-xs-3">
     <h2>User info</h2>
-    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
+    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg", size:'100x100' %>
     <table class="table">
       <tbody>
         <tr></tr> 
@@ -26,16 +25,13 @@
         </tr>
       </tbody>
     </table>
-
     <div class="row">
       <%= link_to edit_user_path(current_user) do %>
         <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></span>
       <% end %>
     </div>
-
     <h2>New book</h2>
     <%= form_for(@book, url: books_path) do |f| %>
-      
       <div class="field row">
         <%= f.label :title %><br />
         <%= f.text_field :title, class:"col-xs-12 book_title", id:"book_title" %>
@@ -49,7 +45,6 @@
       </div>
     <% end %>
   </div>
-
   <div class="col-xs-9">
     <h2>Books</h2>
     <table class="table table-hover table-inverse">
@@ -74,7 +69,6 @@
         </tr>
         <% end %>
       </tbody>
-      
     </table>
   </div>
 </div>
