--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,18 +1,17 @@
-<% if @book.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
-    <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
 <div class="row">
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="col-xs-3">
     <h2>User info</h2>
-    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
+    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg", size:'100x100' %>
     <table class="table">
       <tbody>
         <tr></tr> 
@@ -26,13 +25,11 @@
         </tr>
       </tbody>
     </table>
-
     <div class="row">
       <%= link_to edit_user_path(@find_book.user) do %>
         <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></span>
       <% end %>
     </div>
-
     <h2>New book</h2>
     <%= form_for(@book, url: books_path) do |f| %>
       <div class="field row">
@@ -48,7 +45,6 @@
       </div>
     <% end %>
   </div>
-
   <div class="col-xs-9">
 		<h2>Book detail</h2>
 		<table class="table">
@@ -56,7 +52,7 @@
 		    <tr>
           <td>
             <%= link_to user_path(@find_book.user_id) do %>
-              <%= attachment_image_tag @find_book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
+              <%= attachment_image_tag @find_book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg", size:'40x40' %>
               <br><%= @find_book.user.name %>
             <% end %>       
           </td>
@@ -64,11 +60,11 @@
           <td><%= @find_book.body %></td>
           <% if @find_book.user == current_user %>
             <td>
-              <%= link_to edit_book_path(@find_book) do %>
-                <span class="btn-sm btn-success">Edit</span>
-              <% end %>
+              <%= link_to "Edit", edit_book_path(@find_book), class:"btn-sm btn-success" %>
             </td>
-            <td><%= link_to "Destroy", book_path(@find_book), method: :delete %></td>
+            <td>
+              <%= link_to "Destroy", book_path(@find_book), method: :delete, class:"btn-sm btn-danger", data: {confirm: "本当に消しますか？"} %>
+              </td>
           <% end %>
         </tr>
       </tbody>
