--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,7 @@
 <h2>User info</h2>
-
 <% if @user.errors.any? %>
   <div id="error_explanation">
-    <h2><%= @user.errors.count %> errors prohibited this obj from being saved:</h2>
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this book from being saved:</h2>
     <ul>
     <% @user.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -10,7 +9,6 @@
     </ul>
   </div>
 <% end %>
-
 <%= form_for(@user) do |f| %>
   <div class="field">
     <label for="user_name">Name</label>
