--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,17 @@
-<% if @book.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= @book.errors.count %> errors prohibited this obj from being saved:</h2>
-    <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
 <div class="row">
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="col-xs-3">
     <h2>User info</h2>
-    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
+    <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg", size:'100x100' %>
     <table class="table">
       <tbody>
         <tr></tr> 
@@ -26,13 +25,11 @@
         </tr>
       </tbody>
     </table>
-
     <div class="row">
       <%= link_to edit_user_path(@user) do %>
         <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench"></span>
       <% end %>
     </div>
-
     <h2>New book</h2>
     <%= form_for(@book, url: books_path) do |f| %>
       <div class="field row">
@@ -48,7 +45,6 @@
       </div>
     <% end %>
   </div>
-
   <div class="col-xs-9">
     <h2>Books</h2>
     <table class="table table-hover table-inverse">
@@ -65,7 +61,7 @@
           <tr>
             <td>
               <%= link_to user_path(book.user) do %>
-                <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg" %>
+                <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class:"attachment user profile_image fallback", fallback: "no_image.jpg", size:'40x40' %>
               <% end %>        
             </td>
             <td><%= link_to book.title, book_path(book) %></td>
